--- a/backend/clients-approval/Gemfile
+++ b/backend/clients-approval/Gemfile
@@ -13,8 +13,12 @@ gem "paranoia", "~> 2.2"
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
-  # using local variables
-  gem 'dotenv-rails'
+  # Tests
+  gem 'rspec-rails', '~> 3.7'
+  # clean db each test running
+  gem 'database_cleaner'
+  # create objects to test
+  gem 'factory_bot_rails'
 end
 
 group :development do
